--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.password=yanloveDB
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #mybatis扫描及别名设置
-mybatis.mapper-locations=classpath:com/example/springboot/mapper/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=com.example.springboot.entity
