--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,16 @@
 server.port=8181
+# 定义匹配静态资源路径
+spring.mvc.static-path-pattern=/**
 
-spring.servlet.multipart.max-file-size=500MB
-spring.servlet.multipart.max-request-size=500MB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#datasource配置
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/database?characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=yanloveDB
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#mybatis扫描及别名设置
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=com.example.springboot.entity
